--- a/players.html
+++ b/players.html
@@ -70,6 +70,9 @@
 <dd><a href="players.html#Alluro"><span class="i"><img src="images/generic.png" alt="Alluro"></span><span class="n g1">Alluro</span></a></dd>
 <dd><a href="players.html#Honzik1"><span class="i"><img src="images/generic.png" alt="Honzik1"></span><span class="n g1">Honzik1</span></a></dd>
 <dd><a href="players.html#rayden"><span class="i"><img src="images/generic.png" alt="RayDen"></span><span class="n g2">RayDen</span></a></dd>
+<dd><a href="players.html#Secrets"><span class="i"><img src="images/generic.png" alt="Secrets"></span><span class="n g1">Secrets</span></a></dd>
+<dd><a href="players.html#1989"><span class="i"><img src="images/generic.png" alt="1989"></span><span class="n g1">1989</span></a></dd>
+<dd><a href="players.html#Benji"><span class="i"><img src="images/generic.png" alt="Benji"></span><span class="n g1">Benji</span></a></dd>
 <dt>Missing in action</dt>
 <dd><a href="players-old.html#majikal"><span class="i"><img src="images/majikal.png" alt="Majikal"></span><span class="n g1">Majikal (God)</span></a></dd>
 <dd><a href="players-old.html"><span class="i"><img src="images/generic.png" alt=""></span><span class="n g3">M.I.A. &raquo;</span></a></dd>
