--- a/new-sauer-members.html
+++ b/new-sauer-members.html
@@ -37,7 +37,10 @@
 <h2>New Sauerbraten members</h2>
 
 <p>
-  <strong>Alluro</strong> joined us a while ago. Some months after, <strong>Honzik1</strong> joined.
+  Just giving a warm welcome to our new members:
+  <strong>Secrets</strong> whose ambition shall lead far.
+  <strong>1989</strong>, our new mapper prodigy who already master the pepega style.
+  <strong>Benji</strong>, soon to be the orion incontested master.
   <br>
   Welcome to w00p!
 </p>
