--- a/servers.html
+++ b/servers.html
@@ -39,7 +39,7 @@
 <dl>
 <dd><strong>sauer</strong> = <strong><code>/connect sauer.woop.us</code></strong>, for example.</dd>
 <dt>Sauerbraten</dt>
-<dd><strong>/connect w00p.cc</strong> - European. Our private server for playing</dd>
+<dd><strong>/connect 51.91.124.208</strong> - European. Our private server for playing</dd>
 
 <dt>AssaultCube - private</dt>
 <dd><strong>aura 1999</strong> - European, private games. Passwords available, 1.2</dd>
