--- a/join.html
+++ b/join.html
@@ -41,9 +41,9 @@
 
 <ol>
 <li>Fill in <a href="join_application.html">the application form</a>. Try to be concise.</li>
-<li>E-mail it to raffael at <a href="mailto:raffael@woop.us">raffael@woop.us</a> and Cc to <a href="mailto:drakas@woop.us">drakas@woop.us</a>.</li>
+<li>E-mail it to <a href="mailto:drakas@woop.us">drakas@woop.us</a> so he can stays up to date and send the form to a member on our discord.</li>
 <li>Wait some time.</li>
-<li>raffael and Drakas will either <strong>Accept</strong> or <strong>Reject</strong> your application.</li>
+<li>The team shall vote for your faith and <strong>Accept</strong> or <strong>Reject</strong> your application.</li>
 <li>If <strong>Accepted</strong>, send us a <a href="players.html">profile</a> of your own.</li>
 <li>If you have any questions contact us on Discord</li>
 </ol>
