--- a/new-sauer-members.html
+++ b/new-sauer-members.html
@@ -42,6 +42,8 @@
   <strong>1989</strong>, our new mapper prodigy who already master the pepega style.
   <strong>Benji</strong>, soon to be the orion incontested master.
   <br>
+  <strong>Alluro</strong> joined us a while ago. Some months after, <strong>Honzik1</strong> joined.
+  <br>
   Welcome to w00p!
 </p>
 
