--- a/players.html
+++ b/players.html
@@ -72,6 +72,7 @@
 <dd><a href="players.html#rayden"><span class="i"><img src="images/generic.png" alt="RayDen"></span><span class="n g2">RayDen</span></a></dd>
 <dd><a href="players.html#Secrets"><span class="i"><img src="images/generic.png" alt="Secrets"></span><span class="n g1">Secrets</span></a></dd>
 <dd><a href="players.html#1989"><span class="i"><img src="images/generic.png" alt="1989"></span><span class="n g1">1989</span></a></dd>
+<dd><a href="players.html#ySoSrs"><span class="i"><img src="images/generic.png" alt="ySoSrs"></span><span class="n g1">ySoSrs</span></a></dd>
 <dd><a href="players.html#Benji"><span class="i"><img src="images/generic.png" alt="Benji"></span><span class="n g1">Benji</span></a></dd>
 <dt>Missing in action</dt>
 <dd><a href="players-old.html#majikal"><span class="i"><img src="images/majikal.png" alt="Majikal"></span><span class="n g1">Majikal (God)</span></a></dd>
@@ -480,6 +481,38 @@ He stayed there from 2014 until the end of 2015, he left when the clan became in
 <p>He is currently playing  for w00p and Fra.</p>
 <hr class="ul">
 
+<h2><a name="secrets" href="players.html#secrets">secrets</a></h2>
+<dl class="p_stats">
+<dd class="dim"><img src="images/generic.png" alt="secrets"></dd>
+<dt>Location</dt><dd>Costa Rica</dd>
+<dt>Favourite game</dt><dd>Sauerbraten</dd>
+</dl>
+<hr class="ul">
+
+<h2><a name="1989" href="players.html#1989">1989</a></h2>
+<dl class="p_stats">
+<dd class="dim"><img src="images/generic.png" alt="1989"></dd>
+<dt>Location</dt><dd>France</dd>
+<dt>Favourite game</dt><dd>Sauerbraten</dd>
+</dl>
+<hr class="ul">
+
+<h2><a name="ySoSrs" href="players.html#ySoSrs">ySoSrs</a></h2>
+<dl class="p_stats">
+<dd class="dim"><img src="images/generic.png" alt="ySoSrs"></dd>
+<dt>Location</dt><dd>Belgium</dd>
+<dt>Favourite game</dt><dd>Sauerbraten</dd>
+</dl>
+<hr class="ul">
+
+<h2><a name="Benji" href="players.html#ySoSrs">Benji</a></h2>
+<dl class="p_stats">
+<dd class="dim"><img src="images/generic.png" alt="Benji"></dd>
+<dt>Location</dt><dd>Germany</dd>
+<dt>Favourite game</dt><dd>Sauerbraten</dd>
+</dl>
+<hr class="ul">
+	
 <!-- Last Modified: $Date: Tue, 02 Aug 2016 21:38:20 +0000$ by  -->
 </div>
 <div id="bottom">&copy; Woop clan 2006 - 2019.<ul id="blink"><li><a href="http://woop.us/sys/">Admin</a></li><li><a href="sitemap.html">Site map</a></li></ul>
