--- a/new-sauer-members.html
+++ b/new-sauer-members.html
@@ -39,8 +39,9 @@
 <p>
   Just giving a warm welcome to our new members:
   <strong>Secrets</strong> whose ambition shall lead far.
-  <strong>1989</strong>, our new mapper prodigy who already master the pepega style.
-  <strong>Benji</strong>, soon to be the orion incontested master.
+  <strong>1989</strong> who already master the art of the pepega style.
+  <strong>ySoSrs</strong>, the ex noVi ectf prodigy.
+  <strong>Benji</strong>, soon to be the orion incontested champion.
   <br>
   <strong>Alluro</strong> joined us a while ago. Some months after, <strong>Honzik1</strong> joined.
   <br>
