--- a/new-sauer-members.html
+++ b/new-sauer-members.html
@@ -38,10 +38,10 @@
 
 <p>
   Just giving a warm welcome to our new members:
-  <strong>Secrets</strong> whose ambition shall lead far.
-  <strong>1989</strong> who already master the art of the pepega style.
-  <strong>ySoSrs</strong>, the ex noVi ectf prodigy.
-  <strong>Benji</strong>, soon to be the orion incontested champion.
+  <strong>Secrets</strong> whose ambition shall lead in the top players.<br>
+  <strong>1989</strong> who already master the art of the pepega style.<br>
+  <strong>ySoSrs</strong>, the ex noVi ectf prodigy.<br>
+  <strong>Benji</strong>, soon to be the orion incontested champion.<br>
   <br>
   <strong>Alluro</strong> joined us a while ago. Some months after, <strong>Honzik1</strong> joined.
   <br>
